--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon",
+    "se":"sequelize init"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -22,7 +23,8 @@
     "npm": "^6.10.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^5.10.1"
+    "sequelize": "^5.10.1",
+    "sequelize-cli": "^5.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
