--- a/back/config/config.json
+++ b/back/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "dpdltm2@",
+    "password": "password",
     "database": "profilesns",
     "host": "127.0.0.1",
     "dialect": "mysql",
