폴리필 적용해서 규형 브라우저 적용 시키기

--- a/front/package.json
+++ b/front/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "bulid": "next build",
-    "start": "next start"
+    "build": "cross-env BUNDLE_ANALYZE=both next build",
+    "prestart": "npm run build",
+    "start": "cross-env NODE_ENV=production next start"
   },
   "repository": {
     "type": "git",
@@ -19,15 +20,19 @@
   },
   "homepage": "https://github.com/nomadGeonilJang/profile#readme",
   "dependencies": {
+    "@zeit/next-bundle-analyzer": "^0.1.2",
     "antd": "^3.20.2",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
+    "compression-webpack-plugin": "^3.0.0",
     "cookie-parser": "^1.4.4",
+    "cross-env": "^5.2.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "helmet": "^3.19.0",
     "hpp": "^0.2.2",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^1.6.5",
@@ -38,11 +43,13 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-redux": "^7.1.0-rc.1",
     "react-saga": "^0.3.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.5",
-    "sequelize": "^5.10.0"
+    "sequelize": "^5.10.0",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
