--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon",
     "build": "cross-env BUNDLE_ANALYZE=both next build",
     "prestart": "npm run build",
-    "start": "cross-env NODE_ENV=production next start"
+    "start": "cross-env NODE_ENV=production PORT=80 pm2 start server"
   },
   "repository": {
     "type": "git",
