--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "se": "sequelize init"
+    "se": "sequelize init",
+    "start":"cross-env NODE_ENV=production PORT=80 pm2 start index.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
